Replace deprecated methods, shorten some code